prow/cluster/cert-manager/tls-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: tls-ing
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prow
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - secretName: prow-tls
    hosts:
    - prow.istio.io
  rules:
  - host: prow.istio.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: deck
          servicePort: 80
      - path: /hook
        backend:
          serviceName: hook
          servicePort: 8888
